--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -11,6 +11,14 @@
   },
   "dependencies": {
     "hzl-core": "*",
-    "commander": "^12.0.0"
+    "commander": "^12.0.0",
+    "zod": "^3.22.4",
+    "better-sqlite3": "^11.8.1"
+  },
+  "devDependencies": {
+    "vitest": "^1.6.0",
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/node": "^20.10.0",
+    "typescript": "^5.3.0"
   }
 }
