feat(cli): add init and which-db commands (Task 24.1-24.2)
- init command creates/initializes HZL database
- which-db command shows resolved database path with source info
- Added vitest config for hzl-core path resolution
- Added exports field to hzl-core package.json

--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -4,6 +4,32 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./db/*": {
+      "types": "./dist/db/*.d.ts",
+      "import": "./dist/db/*.js"
+    },
+    "./events/*": {
+      "types": "./dist/events/*.d.ts",
+      "import": "./dist/events/*.js"
+    },
+    "./projections/*": {
+      "types": "./dist/projections/*.d.ts",
+      "import": "./dist/projections/*.js"
+    },
+    "./services/*": {
+      "types": "./dist/services/*.d.ts",
+      "import": "./dist/services/*.js"
+    },
+    "./utils/*": {
+      "types": "./dist/utils/*.d.ts",
+      "import": "./dist/utils/*.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
