--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "hzl-workspace",
   "private": true,
+  "description": "HZL - Task coordination system for AI agent swarms",
   "workspaces": ["packages/*"],
-  "engines": { "node": ">=20.0.0" },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "packageManager": "npm@10.0.0",
   "scripts": {
     "build": "npm run build --workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
-    "test:ci": "npm run test --workspaces --if-present -- --run",
+    "test:ci": "npm run test --workspaces --if-present -- --run --coverage",
+    "test:watch": "npm run test --workspaces --if-present -- --watch",
     "typecheck": "tsc -b packages/*/tsconfig.json",
     "lint": "eslint \"packages/*/src/**/*.ts\"",
     "lint:fix": "eslint \"packages/*/src/**/*.ts\" --fix",
     "format": "prettier -w .",
-    "format:check": "prettier -c ."
+    "format:check": "prettier -c .",
+    "clean": "rm -rf packages/*/dist packages/*/.turbo",
+    "prepare": "npm run build",
+    "version:patch": "npm version patch --workspaces --include-workspace-root",
+    "version:minor": "npm version minor --workspaces --include-workspace-root",
+    "version:major": "npm version major --workspaces --include-workspace-root"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
@@ -22,5 +31,14 @@
     "@typescript-eslint/parser": "^6.19.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "prettier": "^3.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/hzl.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/your-org/hzl/issues"
+  },
+  "homepage": "https://github.com/your-org/hzl#readme"
 }
