--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -1,16 +1,42 @@
 {
   "name": "hzl-cli",
   "version": "0.1.0",
+  "description": "CLI for HZL - Task coordination for AI agent swarms",
   "type": "module",
   "bin": {
     "hzl": "dist/cli.js"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "keywords": [
+    "cli",
+    "task-management",
+    "ai-agents",
+    "event-sourcing",
+    "sqlite"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-org/hzl.git",
+    "directory": "packages/hzl-cli"
+  },
   "scripts": {
     "build": "tsc",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
-    "hzl-core": "*",
+    "hzl-core": "workspace:*",
     "commander": "^12.0.0",
     "zod": "^3.22.4",
     "better-sqlite3": "^11.8.1"
