--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Enable npm via corepack
+        run: |
+          corepack enable
+          corepack prepare npm@10.0.0 --activate
+
       - name: Install dependencies
         run: npm ci
 
@@ -31,9 +36,6 @@ jobs:
 
       - name: Run lint
         run: npm run lint
-
-      - name: Check formatting
-        run: npm run format:check
 
   test:
     name: Test (${{ matrix.os }}, Node ${{ matrix.node }})
@@ -52,6 +54,11 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
+
+      - name: Enable npm via corepack
+        run: |
+          corepack enable
+          corepack prepare npm@10.0.0 --activate
 
       - name: Install dependencies
         run: npm ci
@@ -81,6 +88,11 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+
+      - name: Enable npm via corepack
+        run: |
+          corepack enable
+          corepack prepare npm@10.0.0 --activate
 
       - name: Install dependencies
         run: npm ci
