--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,11 @@ jobs:
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Enable npm via corepack
+        run: |
+          corepack enable
+          corepack prepare npm@10.0.0 --activate
+
       - name: Install dependencies
         run: npm ci
 
