fix(cli): resolve core paths from source

--- a/packages/hzl-cli/tsconfig.json
+++ b/packages/hzl-cli/tsconfig.json
@@ -4,7 +4,7 @@
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "hzl-core/*": ["../hzl-core/dist/*"]
+      "hzl-core/*": ["../hzl-core/src/*"]
     },
     "types": ["node", "vitest"],
     "rootDir": "src",
