--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -31,7 +31,7 @@
     "directory": "packages/hzl-cli"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "test": "vitest run",
     "test:watch": "vitest"
   },
