--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        node: ['20', '22']
+        os: [ubuntu-latest]
+        node: ['20']
 
     steps:
       - uses: actions/checkout@v4
