--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -42,6 +42,7 @@
     "better-sqlite3": "^11.8.1"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.6.0",
     "vitest": "^1.6.0",
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.10.0",
