--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -73,6 +73,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.6.0",
     "@types/better-sqlite3": "^7.6.8",
     "fast-check": "^3.15.0",
     "tsx": "^4.19.2"
