--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -75,7 +75,9 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^1.6.0",
     "@types/better-sqlite3": "^7.6.8",
+    "@types/node": "^20.10.0",
     "fast-check": "^3.15.0",
+    "vitest": "^1.6.0",
     "tsx": "^4.19.2"
   }
 }
