--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -4,6 +4,10 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -69,8 +73,11 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^1.6.0",
     "@types/better-sqlite3": "^7.6.8",
+    "@types/node": "^20.10.0",
     "fast-check": "^3.15.0",
+    "vitest": "^1.6.0",
     "tsx": "^4.19.2"
   }
 }
