Improve README with philosophy, usage guide, and agent snippet
- Add "Why HZL?" section explaining the motivation for user-level task
  storage, agent-optimized CLI, and active-work-not-archival philosophy
- Add design principles section
- Reorganize commands by use case: lifecycle, agents, stuck recovery, oversight
- Add copy-paste CLAUDE.md/AGENTS.md snippet for users to add to their repos
- Update repo URLs from your-org/hzl to tmchow/hzl
- Remove redundant AGENTS.md file (snippet now lives in README)
- Add Node.js 20+ requirement to installation

--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/hzl.git"
+    "url": "https://github.com/tmchow/hzl.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/your-org/hzl/issues"
+    "url": "https://github.com/tmchow/hzl/issues"
   },
-  "homepage": "https://github.com/your-org/hzl#readme"
+  "homepage": "https://github.com/tmchow/hzl#readme"
 }
