--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -27,7 +27,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/hzl.git",
+    "url": "https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-cli"
   },
   "scripts": {
