--- a/package.json
+++ b/package.json
@@ -18,19 +18,26 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "clean": "rm -rf packages/*/dist packages/*/.turbo",
-    "prepare": "npm run build",
+    "prepare": "husky && npm run build",
     "version:patch": "npm version patch --workspaces --include-workspace-root",
     "version:minor": "npm version minor --workspaces --include-workspace-root",
     "version:major": "npm version major --workspaces --include-workspace-root"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/exec": "^6.0.0",
+    "@semantic-release/git": "^10.0.0",
     "@types/node": "^20.11.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.0",
-    "eslint": "^8.56.0",
-    "@typescript-eslint/parser": "^6.19.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "prettier": "^3.2.0"
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
+    "husky": "^9.0.0",
+    "prettier": "^3.2.0",
+    "semantic-release": "^23.0.0",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.0"
   },
   "repository": {
     "type": "git",
