--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -36,7 +36,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "hzl-core": "*",
+    "hzl-core": "^0.1.0",
     "commander": "^12.0.0",
     "zod": "^3.22.4",
     "better-sqlite3": "^11.8.1"
