ci: configure npm OIDC trusted publishing
- Add environment: release to workflow for npm trusted publisher verification
- Enable provenance: true for both npm packages

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,10 +10,12 @@
       "prepareCmd": "node scripts/sync-versions.js ${nextRelease.version}"
     }],
     ["@semantic-release/npm", {
-      "pkgRoot": "packages/hzl-core"
+      "pkgRoot": "packages/hzl-core",
+      "provenance": true
     }],
     ["@semantic-release/npm", {
-      "pkgRoot": "packages/hzl-cli"
+      "pkgRoot": "packages/hzl-cli",
+      "provenance": true
     }],
     ["@semantic-release/git", {
       "assets": [
