--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hzl-core",
   "version": "1.0.0",
+  "description": "Core library for HZL - Lightweight task tracking for AI agents and swarms",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
