feat: add dev mode isolation, XDG paths, Windows support, and security hardening
- Auto-detect dev mode when running from source tree
- Use XDG Base Directory paths on Linux/macOS (~/.local/share/hzl, ~/.config/hzl)
- Use LOCALAPPDATA/APPDATA on Windows
- Add Claude hook to protect production data directories
- Harden hook against path traversal attacks and missing jq
- Add exhaustiveness checks and atomic config writes
- Update which-db to use centralized resolution logic

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,12 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Local development (XDG overrides, dev mode is automatic)
+.local/
+.config/
+.envrc
+
+# Claude Code local settings (user-specific, not shared)
+.claude/settings.local.json
+packages/*/.claude/
