--- a/.releaserc.json
+++ b/.releaserc.json
@@ -21,7 +21,8 @@
       "assets": [
         "CHANGELOG.md",
         "package.json",
-        "packages/*/package.json"
+        "packages/*/package.json",
+        "packages/hzl-cli/README.md"
       ],
       "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
     }],
