--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "hzl-workspace",
   "private": true,
   "description": "Lightweight task tracking for AI agents and swarms",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "engines": {
     "node": ">=20.0.0"
   },
@@ -35,7 +37,7 @@
     "eslint": "^8.56.0",
     "husky": "^9.0.0",
     "prettier": "^3.2.0",
-    "semantic-release": "^23.0.0",
+    "semantic-release": "^25.0.3",
     "typescript": "^5.3.3",
     "vitest": "^1.2.0"
   },
