--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^8.56.0",
     "husky": "^9.0.0",
     "prettier": "^3.2.0",
     "semantic-release": "^25.0.3",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.0"
+    "vitest": "^4.0.18"
   },
   "repository": {
     "type": "git",
