--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -36,16 +36,16 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "hzl-core": "^1.4.0",
+    "better-sqlite3": "^11.8.1",
     "commander": "^12.0.0",
-    "zod": "^3.22.4",
-    "better-sqlite3": "^11.8.1"
+    "hzl-core": "^1.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^1.6.0",
-    "vitest": "^1.6.0",
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0"
+    "@vitest/coverage-v8": "^4.0.18",
+    "typescript": "^5.3.0",
+    "vitest": "^4.0.18"
   }
 }
