--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -74,11 +74,11 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^1.6.0",
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^20.10.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "fast-check": "^3.15.0",
-    "vitest": "^1.6.0",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "vitest": "^4.0.18"
   }
 }
