--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "hzl-workspace",
   "private": true,
   "description": "Lightweight task tracking for AI agents and swarms",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "engines": {
     "node": ">=20.0.0"
   },
@@ -30,14 +32,17 @@
     "@semantic-release/exec": "^6.0.0",
     "@semantic-release/git": "^10.0.0",
     "@types/node": "^20.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "eslint": "^9.39.2",
+    "globals": "^17.2.0",
     "husky": "^9.0.0",
     "prettier": "^3.2.0",
-    "semantic-release": "^23.0.0",
+    "semantic-release": "^25.0.3",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.0"
+    "typescript-eslint": "^8.54.0",
+    "vitest": "^4.0.18"
   },
   "repository": {
     "type": "git",
