--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -9,6 +9,11 @@
     "dist",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tmchow/hzl.git",
+    "directory": "packages/hzl-core"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
