--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -36,13 +36,13 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "better-sqlite3": "^11.8.1",
-    "commander": "^12.0.0",
+    "libsql": "^0.5.0",
+    "commander": "^14.0.0",
     "hzl-core": "^1.6.0",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.10",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^4.0.18",
     "typescript": "^5.3.0",
