--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -74,12 +74,12 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "better-sqlite3": "^12.6.0",
+    "libsql": "^0.5.0",
     "ulid": "^2.3.0",
-    "zod": "^3.23.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.8",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^4.0.18",
     "fast-check": "^3.15.0",
