fix: read CLI version from package.json and update descriptions
- Read version from package.json instead of hardcoding 0.1.0
- Update all descriptions to match README tagline

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hzl-workspace",
   "private": true,
-  "description": "Lightweight task tracking for AI agents and swarms",
+  "description": "A shared task ledger for OpenClaw and poly-agent workflows.",
   "workspaces": [
     "packages/*"
   ],
