--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hzl-core",
   "version": "1.7.4",
-  "description": "Core library for HZL - Lightweight task tracking for AI agents and swarms",
+  "description": "Core library for HZL - A shared task ledger for OpenClaw and poly-agent workflows.",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
