feat(hzl-cli): add serve command for web dashboard
- hzl serve starts dashboard on port 3456 (configurable)
- --background forks to background with PID management
- --stop terminates background server
- --status shows running state
- --print-systemd outputs unit file for service setup
- Graceful shutdown on SIGINT/SIGTERM

--- a/packages/hzl-cli/tsconfig.json
+++ b/packages/hzl-cli/tsconfig.json
@@ -11,7 +11,8 @@
     "outDir": "dist"
   },
   "references": [
-    { "path": "../hzl-core" }
+    { "path": "../hzl-core" },
+    { "path": "../hzl-web" }
   ],
   "include": ["src/**/*"]
 }
