--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -39,6 +39,7 @@
     "libsql": "^0.5.0",
     "commander": "^14.0.0",
     "hzl-core": "^1.7.6",
+    "hzl-web": "^1.7.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
