feat(hzl-web): add Kanban dashboard frontend
Complete single-file frontend with:
- Dark theme with amber accent
- 5-column Kanban board (backlog, blocked, ready, in_progress, done)
- Date/project/refresh filters with localStorage persistence
- Task detail modal with comments and checkpoints
- Activity slide-out panel with recent events
- Mobile responsive layout with tabs
- Polling with visibility API (pauses when tab hidden)
- Connection indicator with error state

--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -20,7 +20,7 @@
     "directory": "packages/hzl-web"
   },
   "scripts": {
-    "build": "tsc -b",
+    "build": "tsc -b && cp -r src/ui dist/",
     "test": "vitest run",
     "test:watch": "vitest"
   },
