feat(hzl-web): add Kanban-style web dashboard (#35)
## Summary

- Add `hzl-web` package with HTTP server and JSON API for task
monitoring
- Add `hzl serve` CLI command with foreground/background modes and
systemd support
- Implement Kanban board UI with live polling, filtering, and
mobile-responsive layout
- Refactor web server to use service layer instead of direct database
access

<img width="800" alt="image"
src="https://github.com/user-attachments/assets/0fbbd4a4-efc7-453e-906a-f1a522f98c08"
/>


## Changes

- **Package scaffolding**: New `packages/hzl-web/` workspace with
TypeScript config
- **HTTP API**: Endpoints for tasks, events, stats, comments, and
checkpoints
- **CLI command**: `hzl serve` with `--port`, `--background`, `--stop`,
`--status`, `--print-systemd` options
- **Frontend**: Single embedded HTML file with dark theme Kanban board,
task detail modal, activity panel
- **Architecture**: Service layer methods added to TaskService and
EventStore

## Test plan

- [x] Unit tests for API routes (24 tests in server.test.ts)
- [x] Unit tests for TaskService methods (16 tests)
- [x] Integration test for server startup/shutdown
- [x] Manual testing with real database
- [x] Manual testing on mobile device

## Screenshots

Dashboard shows 5-column Kanban board (Backlog, Blocked, Ready, In
Progress, Done) with task cards, filtering by date/project, and
configurable refresh interval.

--- a/packages/hzl-web/tsconfig.json
+++ b/packages/hzl-web/tsconfig.json
@@ -11,8 +11,7 @@
     "outDir": "dist"
   },
   "references": [
-    { "path": "../hzl-core" },
-    { "path": "../hzl-web" }
+    { "path": "../hzl-core" }
   ],
   "include": ["src/**/*"]
 }
