fix: add hzl-web package to semantic-release config
The hzl-web package was missing from the release configuration,
preventing it from being published to npm during releases.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -17,6 +17,10 @@
       "pkgRoot": "packages/hzl-cli",
       "provenance": true
     }],
+    ["@semantic-release/npm", {
+      "pkgRoot": "packages/hzl-web",
+      "provenance": true
+    }],
     ["@semantic-release/git", {
       "assets": [
         "CHANGELOG.md",
