fix: include package-lock.json in release commits
The release process was updating package.json files but not regenerating
or committing the lockfile, causing it to drift out of sync.

- Add npm install --package-lock-only to prepareCmd to regenerate lockfile
- Add package-lock.json to git assets for the release commit

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,7 @@
       "changelogFile": "CHANGELOG.md"
     }],
     ["@semantic-release/exec", {
-      "prepareCmd": "node scripts/sync-versions.js ${nextRelease.version}"
+      "prepareCmd": "node scripts/sync-versions.js ${nextRelease.version} && npm install --package-lock-only"
     }],
     ["@semantic-release/npm", {
       "pkgRoot": "packages/hzl-core",
@@ -25,6 +25,7 @@
       "assets": [
         "CHANGELOG.md",
         "package.json",
+        "package-lock.json",
         "packages/*/package.json",
         "packages/hzl-cli/README.md"
       ],
