docs: implement centralized snippet sync system and agent setup pages
- Create generic sync-snippets.js script that processes snippet markers in any .md file
- Workflow now scans README, AGENTS, CLAUDE, GEMINI, CODEX, and all docs/
- Add docs/setup/ section with separate pages for coding agents and OpenClaw
- Create snippets for coding-agent-setup, openclaw-setup-prompt to avoid duplication
- Update openclaw/tools-prompt.md to reference the skill instead of duplicating commands
- Document the snippet system in AGENTS.md with local testing instructions

--- a/.github/workflows/readme-sync.yml
+++ b/.github/workflows/readme-sync.yml
@@ -7,6 +7,10 @@ on:
       - 'docs/snippets/**'
       - 'README.md'
       - 'AGENTS.md'
+      - 'CLAUDE.md'
+      - 'GEMINI.md'
+      - 'CODEX.md'
+      - 'docs/**/*.md'
   workflow_dispatch:
 
 concurrency:
@@ -21,26 +25,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Process includes
-        run: |
-          SNIPPET=$(cat docs/snippets/agent-policy.md)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-          # README.md: wrap in code fence
-          awk -v snippet="$SNIPPET" '
-            /<!-- START \[code:md\]/ { print; print "```md"; print snippet; print "```"; skip=1; next }
-            /<!-- END \[code:md\]/ { skip=0 }
-            !skip { print }
-          ' README.md > README.tmp && mv README.tmp README.md
-
-          # AGENTS.md: raw include (no code fence)
-          awk -v snippet="$SNIPPET" '
-            /<!-- START docs\/snippets\/agent-policy\.md -->/ { print; print snippet; skip=1; next }
-            /<!-- END docs\/snippets\/agent-policy\.md -->/ { skip=0 }
-            !skip { print }
-          ' AGENTS.md > AGENTS.tmp && mv AGENTS.tmp AGENTS.md
+      - name: Process snippet includes
+        run: node scripts/sync-snippets.js
 
       - name: Commit if changed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git diff --quiet README.md AGENTS.md || (git add README.md AGENTS.md && git commit -m "docs: sync documentation includes" && git push)
+          if git diff --quiet; then
+            echo "No changes to commit"
+          else
+            git add README.md AGENTS.md CLAUDE.md GEMINI.md CODEX.md docs/
+            git commit -m "docs: sync documentation includes"
+            git push
+          fi
