chore: add npm package metadata to all packages
Add license, author, contributors, homepage, bugs, engines, and keywords
fields to hzl-cli, hzl-core, and hzl-web packages for improved npm registry
discoverability and metadata display.

--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -19,16 +19,42 @@
     "README.md"
   ],
   "keywords": [
-    "cli",
+    "hzl",
+    "task-ledger",
     "task-management",
+    "coding-agents",
     "ai-agents",
+    "multi-agent",
+    "agent-coordination",
+    "claude-code",
+    "codex",
+    "gemini",
+    "openclaw",
     "event-sourcing",
-    "sqlite"
+    "workflow"
+  ],
+  "license": "MIT",
+  "author": {
+    "name": "Trevin Chow",
+    "url": "https://github.com/tmchow"
+  },
+  "contributors": [
+    {
+      "name": "Kalid Azad",
+      "url": "https://github.com/kazad"
+    }
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-cli"
+  },
+  "homepage": "https://www.hzl-tasks.com",
+  "bugs": {
+    "url": "https://github.com/tmchow/hzl/issues"
+  },
+  "engines": {
+    "node": ">=22.14.0"
   },
   "scripts": {
     "build": "tsc -b",
