--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -9,11 +9,43 @@
     "dist",
     "README.md"
   ],
+  "license": "MIT",
+  "author": {
+    "name": "Trevin Chow",
+    "url": "https://github.com/tmchow"
+  },
+  "contributors": [
+    {
+      "name": "Kalid Azad",
+      "url": "https://github.com/kazad"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-core"
   },
+  "homepage": "https://www.hzl-tasks.com",
+  "bugs": {
+    "url": "https://github.com/tmchow/hzl/issues"
+  },
+  "engines": {
+    "node": ">=22.14.0"
+  },
+  "keywords": [
+    "hzl",
+    "task-ledger",
+    "task-management",
+    "coding-agents",
+    "ai-agents",
+    "multi-agent",
+    "agent-coordination",
+    "event-sourcing",
+    "event-store",
+    "projections",
+    "sqlite",
+    "libsql"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
