--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -15,11 +15,42 @@
     "dist",
     "README.md"
   ],
+  "license": "MIT",
+  "author": {
+    "name": "Trevin Chow",
+    "url": "https://github.com/tmchow"
+  },
+  "contributors": [
+    {
+      "name": "Kalid Azad",
+      "url": "https://github.com/kazad"
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-web"
   },
+  "homepage": "https://www.hzl-tasks.com",
+  "bugs": {
+    "url": "https://github.com/tmchow/hzl/issues"
+  },
+  "engines": {
+    "node": ">=22.14.0"
+  },
+  "keywords": [
+    "hzl",
+    "task-ledger",
+    "task-management",
+    "coding-agents",
+    "ai-agents",
+    "multi-agent",
+    "kanban",
+    "dashboard",
+    "web-ui",
+    "task-board",
+    "visualization"
+  ],
   "scripts": {
     "build": "tsc -b && cp -r src/ui dist/",
     "test": "vitest run",
