fix: add marketplace.json at repo root and fix plugin install instructions
The Claude Code marketplace wasn't working because:
1. marketplace.json was nested in packages/hzl-marketplace/ but
   `/plugin marketplace add` looks for it at the repo root
2. Install command used wrong marketplace identifier (@hzl-marketplace
   instead of @tmchow-hzl)

Changes:
- Add .claude-plugin/marketplace.json at repo root
- Rename plugin from hzl-skills to hzl (more generic for future agents)
- Fix install commands in READMEs to use correct identifier
- Add version sync for marketplace files during releases
- Add CI verification that marketplace versions stay in sync
- Update owner info with correct name and GitHub URL

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Run lint
         run: npm run lint
 
+      - name: Verify marketplace versions
+        run: npm run verify:marketplace
+
   test:
     name: Test (${{ matrix.os }}, Node ${{ matrix.node }})
     runs-on: ${{ matrix.os }}
