ci: add snippet sync check to PR validation
Fails PRs if someone edits synced content inline instead of
editing the source snippet file.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Run lint
         run: npm run lint
 
+      - name: Verify snippets in sync
+        run: node scripts/sync-snippets.js --check
+
       - name: Verify marketplace versions
         run: npm run verify:marketplace
 
