--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -8,9 +8,14 @@ permissions:
 
 jobs:
   commitlint:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v6
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+      - name: Run commitlint
+        run: |
+          npx --yes @commitlint/cli --from origin/${{ github.base_ref }} --to HEAD --config commitlint.config.mjs
