--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -2,6 +2,10 @@ name: Commitlint
 
 on: [pull_request]
 
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   commitlint:
     runs-on: self-hosted
@@ -9,4 +13,10 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v6
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+      - name: Run commitlint
+        run: |
+          npm install --no-save @commitlint/cli @commitlint/config-conventional
+          npx @commitlint/cli --from origin/${{ github.base_ref }} --to HEAD --config commitlint.config.js
