ci: optimize CI workflows with caching and deduplication
- Remove redundant build job; build already runs in test job
- Move artifact upload into test job to avoid duplicate npm ci/build
- Add npm caching to commitlint and readme-sync workflows
- Add concurrency groups to commitlint and pr-title workflows
- Update action versions to v6 for consistency
- Explicitly specify commitlint config file

Saves ~1-2 min per CI run by eliminating redundant build step.

--- a/.github/workflows/readme-sync.yml
+++ b/.github/workflows/readme-sync.yml
@@ -23,12 +23,13 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: '20'
+          node-version: '22'
+          cache: 'npm'
 
       - name: Process snippet includes
         run: node scripts/sync-snippets.js
