--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,31 +81,8 @@ jobs:
           files: ./packages/hzl-core/coverage/lcov.info,./packages/hzl-cli/coverage/lcov.info
           fail_ci_if_error: false
 
-  build:
-    name: Build
-    runs-on: self-hosted
-    needs: [lint-and-typecheck, test]
-    steps:
-      - uses: actions/checkout@v6
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: '22.14.0'
-          cache: 'npm'
-
-      - name: Enable npm via corepack
-        run: |
-          corepack enable
-          corepack prepare npm@10.0.0 --activate
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build all packages
-        run: npm run build
-
       - name: Upload build artifacts
+        if: matrix.node == '22.14.0'
         uses: actions/upload-artifact@v6
         with:
           name: dist
