--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -6,6 +6,10 @@ permissions:
   contents: read
   pull-requests: read
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   commitlint:
     runs-on: self-hosted
@@ -13,10 +17,13 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
+
+      - uses: actions/setup-node@v6
         with:
           node-version: '22'
+          cache: 'npm'
+
+      - run: npm ci
+
       - name: Run commitlint
-        run: |
-          npm install --no-save @commitlint/cli @commitlint/config-conventional
-          npx @commitlint/cli --from origin/${{ github.base_ref }} --to HEAD --config commitlint.config.js
+        run: npx commitlint --from origin/${{ github.base_ref }} --to HEAD --config commitlint.config.js
