fix: include plugin.json in release assets
plugin.json version was being updated by sync-versions.js during release but not committed. Added to .releaserc.json git assets so all versions stay in sync.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -39,6 +39,7 @@
         "packages/*/package.json",
         "packages/hzl-cli/README.md",
         ".claude-plugin/marketplace.json",
+        ".claude-plugin/plugin.json",
         "packages/hzl-marketplace/**/*.json"
       ],
       "message": "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
