--- a/.github/workflows/update-homebrew.yml
+++ b/.github/workflows/update-homebrew.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   update-tap:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Tap Repo
         uses: actions/checkout@v4
