feat(ci): add workflow_dispatch to homebrew update for manual testing

--- a/.github/workflows/update-homebrew.yml
+++ b/.github/workflows/update-homebrew.yml
@@ -3,6 +3,11 @@ name: Update Homebrew Formula
 on:
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to update (e.g., 1.13.2)'
+        required: true
 
 permissions:
   contents: read
@@ -20,7 +25,7 @@ jobs:
 
       - name: Update Formula
         env:
-          TAG_NAME: ${{ github.event.release.tag_name }}
+          TAG_NAME: ${{ github.event.release.tag_name || format('v{0}', github.event.inputs.version) }}
         run: |
           VERSION=${TAG_NAME#v}
 
