--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,31 +17,29 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: '22.14.0'
-          cache: 'npm'
-
-      - name: Enable npm via corepack
-        run: |
-          corepack enable
-          corepack prepare npm@10.0.0 --activate
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run typecheck
-        run: npm run typecheck
+        run: pnpm typecheck
 
       - name: Run lint
-        run: npm run lint
+        run: pnpm lint
 
       - name: Verify snippets in sync
         run: node scripts/sync-snippets.js --check
 
       - name: Verify marketplace versions
-        run: npm run verify:marketplace
+        run: pnpm verify:marketplace
 
   test:
     name: Test (Node ${{ matrix.node }})
@@ -54,25 +52,23 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node }}
-          cache: 'npm'
-
-      - name: Enable npm via corepack
-        run: |
-          corepack enable
-          corepack prepare npm@10.0.0 --activate
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: npm run build
+        run: pnpm build
 
       - name: Run tests
-        run: npm run test:ci
+        run: pnpm test:ci
 
       - name: Upload coverage
         if: matrix.node == '22.14.0'
