--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -18,12 +18,15 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - uses: actions/setup-node@v6
         with:
           node-version: '22'
-          cache: 'npm'
+          cache: 'pnpm'
 
-      - run: npm ci
+      - run: pnpm install --frozen-lockfile
 
       - name: Run commitlint
-        run: npx commitlint --from origin/${{ github.base_ref }} --to HEAD --config commitlint.config.js
+        run: pnpm exec commitlint --from origin/${{ github.base_ref }} --to HEAD --config commitlint.config.js
