--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "libsql": "^0.5.0",
     "typescript": "^5.3.0",
     "vitest": "^4.0.18"
   }
