--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -57,10 +57,11 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "hzl-core": "^1.7.6"
+    "hzl-core": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "libsql": "^0.5.0",
     "typescript": "^5.3.0",
     "vitest": "^4.0.18"
   }
