--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,9 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           # Capture semantic-release output to detect if a new release was made
-          pnpm exec semantic-release 2>&1 | tee release-output.txt
+          # Use npx instead of pnpm exec to ensure NPM_TOKEN is properly passed
+          # to the @semantic-release/npm plugin's temp .npmrc for provenance
+          npx semantic-release 2>&1 | tee release-output.txt
 
           # Check if a new version was published
           if grep -q "Published release" release-output.txt; then
